# Mastering-ROS-2

./: README.md
Chapter02/: ros2_install_jazzy.sh
Chapter02/ros2_jazzy_docker/docker_basics/: Dockerfile  Dockerfile.basic
Chapter02/ros2_jazzy_docker/docker_compose/: docker-compose.yml  docker-compose1.yml
Chapter02/ros2_jazzy_docker/docker_gui/: Dockerfile.master_ros2  create_container.sh
Chapter02/ros2_jazzy_docker/docker_setup_scripts/: setup_docker_ubuntu.sh
Chapter03/master_ros2_interface/: CMakeLists.txt  package.xml
Chapter03/master_ros2_interface/action/: MyCustomAction.action
Chapter03/master_ros2_interface/msg/: CustomMsg.msg
Chapter03/master_ros2_interface/srv/: ConcatStrings.srv
Chapter03/master_ros2_pkg/: CMakeLists.txt  package.xml
Chapter03/master_ros2_pkg/launch/: action_server_client.launch.py  pub_params_sub.launch.py  pub_sub.launch.py  server_client.launch.py
Chapter03/master_ros2_pkg/src/: action_client.cpp  action_server.cpp  publisher_node.cpp  publisher_node_params.cpp  simple_client.cpp  simple_server.cpp  subscriber_node.cpp
Chapter04/: rrbot.gv  simple_rrbot.urdf
Chapter04/rrbot_description/: CMakeLists.txt  package.xml
Chapter04/rrbot_description/launch/: rrbot.launch.py
Chapter04/rrbot_description/rviz/: view_robot.rviz
Chapter04/rrbot_description/urdf/: rrbot.urdf  rrbot.urdf.xacro
Chapter05/: moving_robot.sdf
Chapter05/diffbot_gazebo/: CMakeLists.txt  package.xml
Chapter05/diffbot_gazebo/config/: diffbot_controllers.yaml  ros_gz_bridge.yaml  ros_gz_bridge_gazebo.yaml
Chapter05/diffbot_gazebo/launch/: diffbot_gazebo.launch.py  diffbot_gz.launch.py  diffbot_gz_ros2_control.launch.py
Chapter05/diffbot_gazebo/rviz/: model.rviz
Chapter05/diffbot_gazebo/scripts/: twist_convert.py
Chapter05/diffbot_gazebo/urdf/: diffbot.xacro
Chapter05/diffbot_gazebo/worlds/: empty.world
Chapter05/docker_gazebo/: Dockerfile.master_ros2  remove_container.sh  ros_entrypoint.sh  ros_ws_entrypoint.sh
Chapter05/rrbot_gazebo/: CMakeLists.txt  package.xml
Chapter05/rrbot_gazebo/config/: ros_gz_bridge.yaml  rrbot_controllers.yaml
Chapter05/rrbot_gazebo/launch/: rrbot_gazebo.launch.py
Chapter05/rrbot_gazebo/rviz/: model.rviz
Chapter05/rrbot_gazebo/urdf/: rrbot.gazebo.xacro  rrbot.ros2_control.xacro  rrbot.xacro
Chapter05/rrbot_gazebo/worlds/: empty.world
Chapter06/sine_ctrl/: CMakeLists.txt  package.xml
Chapter06/sine_ctrl/src/: sine_controller.cpp
Chapter06/two_joints_robot/: CMakeLists.txt  package.xml
Chapter06/two_joints_robot/config/: controller.yaml
Chapter06/two_joints_robot/launch/: display.launch.py  start_simu.launch.py
Chapter06/two_joints_robot/urdf/: two_joints_robot.urdf  two_joints_robot.xacro
Chapter07/bt_action_server/: CMakeLists.txt  package.xml
Chapter07/bt_action_server/action/: ReachLocation.action
Chapter07/bt_action_server/launch/: bt_action.launch.py
Chapter07/bt_action_server/src/: bt_action.cpp  reach_location_client.cpp  reach_location_server.cpp
Chapter07/bt_action_server/trees/: bt_action.xml
Chapter07/first_bts/: CMakeLists.txt  package.xml
Chapter07/first_bts/launch/: number_checker.launch.py  sequence_tree.launch.py
Chapter08/docker_nav2/: Dockerfile.master_ros2  start_container.sh
Chapter08/nav2_bt_client/: CMakeLists.txt  package.xml
Chapter08/nav2_bt_client/bt_xml/: nav_tree_naive.xml
Chapter08/nav2_bt_client/config/: map_locations.yaml
Chapter08/nav2_bt_client/include/: navigation_behaviors.h
Chapter08/nav2_bt_client/launch/: start_bt_app.launch.py
Chapter08/nav2_bt_client/src/: nav2_bt_node.cpp  navigation_behaviors.cpp
Chapter08/nav2_client/: CMakeLists.txt  package.xml
Chapter08/nav2_client/include/nav2_client/: navigation_client.hpp
Chapter08/nav2_client/src/: main.cpp  navigation_client.cpp
Chapter08/rosbot_description/: package.xml  setup.py
Chapter08/rosbot_nav2_bringup/: CMakeLists.txt  package.xml
Chapter09/panda_description/: CMakeLists.txt  package.xml
Chapter09/panda_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
Chapter09/panda_moveit_control/: CMakeLists.txt  package.xml
Chapter09/panda_moveit_control/launch/: cartesian_space_planning.launch.py  get_info.launch.py  joint_space_planning.launch.py  planning_with_obstacles.launch.py
Chapter09/panda_moveit_control/src/: cartesian_space_planning.cpp  create_scene_objects.cpp  get_info.cpp  joint_space_planning.cpp  planning_with_obstacles.cpp
Chapter10/my_opencv_package/: CMakeLists.txt  package.xml
Chapter10/pcl_processing/: CMakeLists.txt  package.xml
Chapter10/usb_cam_launcher/: CMakeLists.txt  package.xml
Chapter11/px4_ctrl/: CMakeLists.txt  package.xml
Chapter12/mobile_robot_model/: CMakeLists.txt  package.xml
Chapter13/first_gtest/: CMakeLists.txt  package.xml
Chapter13/first_gtest/test/: first_test.cpp
Chapter13/to_lowercase/: CMakeLists.txt  package.xml
Chapter14/docker_llm/: Dockerfile.master_ros2  build_image.sh  create_container.sh  requirements.txt  stop_container.sh
Chapter14/ros2_basic_agent/: package.xml  setup.cfg  setup.py
Chapter14/ros2_basic_agent/config/: openai.env
Chapter14/ros2_basic_agent/launch/: start_ros2_basic_agent.py  start_ros2_tools_agent.py  start_turtlebot3_nav2_agent.py  start_turtlesim_agent.py  start_ur_moveit2_agent.py
Chapter14/ros2_basic_agent/ros2_basic_agent/: ros2_ai_agent_basic.py  ros2_ai_agent_basic_tools.py  ros2_ai_agent_turtlebo3_nav2.py  ros2_ai_agent_turtlesim.py  ros2_ai_agent_ur_moveit2.py
Chapter14/ros2_basic_agent/test/: __init__.py
Chapter16/circle_display_plugin/: CMakeLists.txt  package.xml  rviz_common_plugins.xml
Chapter16/circle_display_plugin/include/circle_display_plugin/: circle_display.hpp
Chapter16/circle_display_plugin/src/: circle_display.cpp
Chapter16/circle_msgs/: CMakeLists.txt  package.xml
Chapter16/cmd_vel/: CMakeLists.txt  package.xml  plugin.xml
Chapter16/cmd_vel/include/cmd_vel/: cmd_vel.h
Chapter16/cmd_vel/src/: cmd_vel.cpp  cmd_vel_ui.ui
Chapter16/cmd_vel_plugin/: CMakeLists.txt
Chapter16/cmd_vel_plugin/src/: pub_cmd_vel.cpp
(+64 files in other folders)
